--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,3 +1,28 @@
+@import "../../styles/variables.scss";
 .home{
+
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(180px, auto);
    
+
+    .box{
+        padding: 20px;
+        border-radius: 10px;
+        border: 1px solid $soft-bg;
+        background-color: rgb(117, 121, 122);
+    }
+
+    .box1, .box4{
+        grid-column: span 1;
+        grid-row: span 3;
+    }
+
+    .box7{
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+
+
 }
