--- a/src/pages/users/Users.scss
+++ b/src/pages/users/Users.scss
@@ -1,3 +1,15 @@
-.home{
+.users{
     
+
+    .info{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 20px;
+
+        button{
+            padding: 5px;
+            cursor: pointer;
+        }
+    }
 }
