Responsive ready. Project ends

--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
 .menu{
     .item{
@@ -12,6 +13,10 @@
             font-weight: 200;
             color: $soft-color;
             text-transform: uppercase;
+
+            @include lg{
+                display: none;
+            }
         }
 
         .listItem{
@@ -24,6 +29,12 @@
 
             &:hover{
                 background-color: $soft-bg;
+            }
+
+            .listItemTitle{
+                @include lg{
+                    display: none;
+                }
             }
         }
     }
