--- a/src/components/topBox/TopBox.scss
+++ b/src/components/topBox/TopBox.scss
@@ -1,16 +1,20 @@
+@import "../../styles/responsive.scss";
+
 .topBox {
   h1 {
     margin-bottom: 20px;
+
+    @include xxl {
+      font-size: 24px;
+    }
   }
 
   .list {
-
     .listItem {
       display: flex;
       align-items: center;
       justify-content: space-between;
       margin-bottom: 30px;
-
 
       .user {
         display: flex;
@@ -21,10 +25,17 @@
           height: 40px;
           object-fit: cover;
           border-radius: 50%;
+
+          @include xxl {
+            display: none;
+          }
+
+          @include lg {
+            display: block;
+          }
         }
 
         .userTexts {
-
           display: flex;
           flex-direction: column;
           gap: 5px;
@@ -36,9 +47,16 @@
 
           .email {
             font-size: 12px;
+
+            @include xxl {
+              display: none;
+            }
+  
+            @include lg {
+              display: block;
+            }
           }
         }
-
       }
 
       .amount {
