--- a/src/components/bigChartBox/BigChartBox.scss
+++ b/src/components/bigChartBox/BigChartBox.scss
@@ -1,9 +1,17 @@
+@import "../../styles/responsive.scss";
+
 .bigChartBox{
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  h1{
+    @include xxl {
+      font-size: 24px;
+    }
+  }
 
   .chart{
     width: 100%;
