--- a/src/components/chartBox/ChartBox.scss
+++ b/src/components/chartBox/ChartBox.scss
@@ -1,18 +1,38 @@
+@import "../../styles/responsive.scss";
+
 .chartBox{
 
     display: flex;
     height: 100%;
+    @include sm{
+        flex-direction: column;
+     }
 
     .box-info{
         flex: 3;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        
+        @include sm{
+            gap: 20px; 
+         }
 
         .title{
             display: flex;
             align-items: center;
             gap: 10px;
+
+            @include xxl{
+               font-size: 14px; 
+            }
+
+        }
+
+        h1{
+            @include xxl{
+                font-size: 20px; 
+             }
         }
 
     }
@@ -36,6 +56,9 @@
             .percentage{
                 font-weight: bold;
                 font-size: 20px;
+                @include xxl{
+                    font-size: 16px; 
+                 }
             }
 
             .duration{
