--- a/src/components/pieChartBox/PieChartBox.scss
+++ b/src/components/pieChartBox/PieChartBox.scss
@@ -1,8 +1,15 @@
+@import "../../styles/responsive.scss";
+
 .pieChartBox{
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    h1{
+        @include xxl {
+            font-size: 24px;
+          }
+    }
 
     .chart{
         display: flex;
