--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,10 +1,27 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
+
 .home{
 
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(180px, auto);
+    grid-auto-flow: dense;
+
+    @include xl{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    @include lg{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @include md{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    @include sm{
+        grid-auto-rows: minmax(120px, auto);
+    }
+   
    
 
     .box{
@@ -21,6 +38,10 @@
     .box7{
         grid-column: span 2;
         grid-row: span 2;
+
+        @include md{
+            display: none;
+        }
     }
 
 
