--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./responsive.scss";
 
 * {
   margin: 0;
@@ -11,23 +12,27 @@ a {
   color: inherit;
 }
 
-.main{
+.main {
   font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
 }
 
-.container{
-  display: flex;
+.container {
+  display: flex; 
 }
 
-.menuContainer{
+.menuContainer {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
+
+  @include lg {
+    width: max-content;
+  }
 }
 
-.contentContainer{
+.contentContainer {
   padding: 5px 20px;
   width: 100%;
 }
